# regex_dictionary

./: .gitattributes  .gitignore  README.md  index.html  main.css  main.js
wasm/: Cargo.toml  justfile
wasm/src/: lib.rs
