[package]
name = "regex_dictionary"
version = "0.1.0"
edition = "2021"
description = "A website that lets you search the dictionary using regex syntax"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
regex = "1.10.2"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"